added a new project in figma called potato chips

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 <!-- Figma Project 2 -->
                 <div class="figma-card">
                     <div class="figma-image">
-                        <img src="img/coming-soon.jpg" alt="Figma Project 2" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'display:flex; align-items:center; justify-content:center; height:100%; font-size:4rem;\'>🎨</div>';">
+                        <img src="img/figma/project2-1.png" alt="Figma Project 2" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'display:flex; align-items:center; justify-content:center; height:100%; font-size:4rem;\'>🎨</div>';">
                         <div class="figma-overlay">
                             <div class="figma-link-icon">
                                 <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
@@ -579,14 +579,14 @@
                         </div>
                     </div>
                     <div class="figma-content">
-                        <h3 class="figma-title">Coming Soon</h3>
-                        <p class="figma-description">Lorem ipsum.</p>
+                        <h3 class="figma-title">Potato Chips Classic</h3>
+                        <p class="figma-description">A JackNJill product called "Potato Chips Classic" with a focus on simplicity and taste. An ad-like that showcase different flavors to savor. The Ad consist of circular motion animation that triggers the exact colour theme when the chip with the specific flavor hits.</p>
                         
                         <div class="figma-actions">
                             <button class="figma-btn figma-btn-primary" onclick="openFigmaGallery('figma2', event)">
                                 View Screens
                             </button>
-                            <a href="YOUR_FIGMA_LINK_2" target="_blank" class="figma-btn figma-btn-secondary" onclick="event.stopPropagation()">
+                            <a href="https://www.figma.com/community/file/1584190654784547341" target="_blank" class="figma-btn figma-btn-secondary" onclick="event.stopPropagation()">
                                 Preview in Figma
                             </a>
                         </div>
@@ -753,10 +753,11 @@ const projectGalleries = {
         ]
     },
     figma2: {
-        name: 'Figma Project 2',
+        name: 'Potato Chips Classic — UI/UX Design',
         images: [
             'img/figma/project2-1.png',
-            'img/figma/project2-2.png'
+            'img/figma/project2-2.png',
+            'img/figma/project3-3.png'
         ]
     },
     figma3: {
