updated files and added new project

--- a/index.html
+++ b/index.html
@@ -428,6 +428,40 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 5 -->
+                <div class="project-card" onclick="window.open('https://sham-expense.netlify.app/', '_blank')" style="cursor: pointer;">
+                    <div class="project-image">
+                        <img src="img/expense-tracker.png" alt="Web App UI" onerror="this.style.display='none';">
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <span class="project-link" title="Visit Live Site" style="display: flex; align-items: center; gap: 8px; font-size: 14px; font-weight: 600;">
+                                    👨‍💻 
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <span class="project-category">Web Design and Development</span>
+                        <h3 class="project-title">Expense Tracker</h3>
+                        <p class="project-subtitle">Personal Finance Management Tool</p>
+                        <p class="project-description">
+                            Designed to help people manage their personal finances effectively. The Expense Tracker is a web-based application that allows users to log and categorize their expenses, set budgets, and generate insightful reports. It features a clean, intuitive interface that makes financial tracking simple and accessible for everyone.
+                            
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML</span>
+                            <span class="tech-tag">CSS</span>
+                            <span class="tech-tag">JS</span>
+                            <span class="tech-tag">Frontend Development</span>
+                            <span class="tech-tag">ReactJS</span>
+                        </div>
+                        <div class="project-stats">
+                            <span class="project-date">2026</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
     </section>
 
@@ -513,6 +547,20 @@
                      onclick="openCertificate('certificates/certificate4.pdf')">
                     <img src="img/certificates/certificate4.jpg"
                          alt="Certificate 4"
+                         loading="lazy">
+                </div>
+                
+                <div class="certificate-card"
+                     onclick="openCertificate('certificates/certificate5.pdf')">
+                    <img src="img/certificates/certificate5.jpg"
+                         alt="Certificate 5"
+                         loading="lazy">
+                </div>
+
+                <div class="certificate-card"
+                     onclick="openCertificate('certificates/certificate6.pdf')">
+                    <img src="img/certificates/certificate6.jpg"
+                         alt="Certificate 6"
                          loading="lazy">
                 </div>
 
